fix npm api key for travis

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": {
     "name": "Michael Heuberger",
     "email": "michael.heuberger@binarykitchen.com",
-    "url": "http://binarykitchen.com"
+    "url": "htts://binarykitchen.com"
   },
   "repository": {
     "type": "git",
