--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "canvas-to-buffer",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Converts a Canvas graphic into a Buffer, as fast as possible and without a copy.",
   "main": "index.js",
   "author": {
@@ -29,11 +29,11 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "atob": "^1.1.2",
-    "canvas": "^1.2.1",
-    "tape": "^3.5.0"
+    "atob": "1.1.2",
+    "canvas": "1.2.8",
+    "tape": "4.2.0"
   },
   "dependencies": {
-    "typedarray-to-buffer": "^3.0.1"
+    "typedarray-to-buffer": "3.0.4"
   }
 }
