--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "convert"
   ],
   "license": "MIT",
+  "engines": {
+    "node": ">=8.10.0",
+    "yarn": ">=1.3.0",
+    "npm": ">=5.4.0"
+  },
   "dependencies": {
     "atob": "2.1.2",
     "typedarray-to-buffer": "3.1.5"
