--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 language: node_js
 node_js:
-  - "8.10.0"
-  - "10.13.0"
-  - "11.10.1"
+  - '16.13.1'
 notifications:
   email:
     on_success: never
     on_failure: always
 before_install:
-- sudo apt-get update -qq && sudo apt-get install libcairo2-dev libjpeg8-dev libpango1.0-dev libgif-dev build-essential g++
+  - sudo apt-get update -qq && sudo apt-get install libcairo2-dev libjpeg8-dev libpango1.0-dev libgif-dev build-essential g++
 install:
-  - yarn
+  - npm install
