--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "canvas-to-buffer",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "description": "Converts a Canvas graphic into a Buffer, as fast as possible and without a copy.",
   "source": "index.js",
   "main": "dist/canvas-to-buffer.js",
   "module": "dist/canvas-to-buffer.mjs",
   "unpkg": "dist/canvas-to-buffer.umd.js",
   "scripts": {
-    "lint": "standard index.js",
-    "build": "microbundle",
+    "lint": "standard src",
+    "lint:fix": "standard --fix src",
+    "build": "microbundle src",
     "test": "tape test/*.js"
   },
   "author": {
@@ -30,18 +31,17 @@
   ],
   "license": "MIT",
   "engines": {
-    "node": ">=8.10.0",
-    "yarn": ">=1.3.0",
-    "npm": ">=5.4.0"
+    "node": "^16.13.1",
+    "npm": "^8.1.2"
   },
   "dependencies": {
     "atob": "2.1.2",
-    "typedarray-to-buffer": "3.1.5"
+    "typedarray-to-buffer": "4.0.0"
   },
   "devDependencies": {
-    "canvas": "2.6.0",
-    "microbundle": "0.11.0",
-    "standard": "13.1.0",
-    "tape": "4.11.0"
+    "canvas": "2.8.0",
+    "microbundle": "0.14.2",
+    "standard": "16.0.4",
+    "tape": "5.4.0"
   }
 }
