--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,10 @@
 {
-  "include": ["src", ".eslintrc.cjs", "prettier.config.cjs"],
+  "include": ["src", "test"],
   "extends": ["@tsconfig/strictest/tsconfig.json", "@tsconfig/node20/tsconfig.json"],
   "compilerOptions": {
     "module": "es2022",
     "moduleResolution": "bundler",
-
     "lib": ["dom", "dom.iterable", "es2022"],
-
-    "noUnusedLocals": true,
-
     "noEmit": true
   }
 }
